--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -14,7 +14,8 @@
 }
 
 .main_get_started.ready {
-    padding: 3rem 0;
+    padding: 1.5rem 0;
+    padding-top: 2rem;
 }
 
 .rocket_icon {
@@ -29,7 +30,7 @@
 }
 
 .email_opened_div img {
-    min-height: 20rem;
+    min-height: 10rem !important;
 }
 
 .gift_para {
