--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -17,7 +17,9 @@
 }
 
 .image_contain {
-    animation: scale-up-hor-center 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite;
+    /* animation: scale-up-hor-center 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite; */
+    /* animation: rotate-center 0.6s ease-in-out both; */
+    animation: slide-fwd-top 8s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite;
     position: absolute;
     top: 0;
     left: 10%;
@@ -132,3 +134,26 @@ text-align: center;
     }
   }
   
+
+
+  @-webkit-keyframes slide-fwd-top {
+    0% {
+      -webkit-transform: translateZ(0) translateY(0);
+              transform: translateZ(0) translateY(0);
+    }
+    100% {
+      -webkit-transform: translateZ(160px) translateY(-100px);
+              transform: translateZ(160px) translateY(-100px);
+    }
+  }
+  @keyframes slide-fwd-top {
+    0% {
+      -webkit-transform: translateZ(0) translateY(0);
+              transform: translateZ(0) translateY(0);
+    }
+    100% {
+      -webkit-transform: translateZ(160px) translateY(-100px);
+              transform: translateZ(160px) translateY(-100px);
+    }
+  }
+
